--- a/KrishiSaathi.html
+++ b/KrishiSaathi.html
@@ -835,16 +835,22 @@
         function renderCropSuggestions() { const cont = document.getElementById('cropSuggestionsList'); const locEl = document.getElementById('suggestionLocation'); if (!cont || !appState.userProfile) { cont.innerHTML = '<p class="text-red-600">Profile error.</p>'; return; } const userLoc = appState.userProfile.location.toLowerCase(); locEl.textContent = appState.userProfile.location; let sugg = appState.cropSuggestionData['default']; for (const s in appState.cropSuggestionData) if (userLoc.includes(s)) { sugg = appState.cropSuggestionData[s]; break; } cont.innerHTML = ''; const renderL = (t, cs, bg, txt) => { if (!cs || cs.length === 0) return ''; let h = `<h3 class="text-xl font-bold ${txt} mb-3">${t}</h3><div class="space-y-4">`; cs.forEach(c => { h += ` <div class="${bg} p-4 rounded-lg shadow-sm border-l-4 border-current"> <div class="flex items-center gap-3 mb-1"> <i data-lucide="${c.icon || 'leaf'}" class="w-5 h-5 ${txt}"></i> <h4 class="font-semibold text-lg">${c.name}</h4> </div> <p class="text-sm text-gray-700 ml-8">${c.req}</p> </div> `; }); h += '</div>'; return h; }; cont.innerHTML += renderL('Best Suited', sugg.best, 'bg-green-100', 'text-green-700'); cont.innerHTML += renderL('Consider', sugg.consider, 'bg-yellow-100', 'text-yellow-700'); cont.innerHTML += renderL('Less Suitable', sugg.lessSuitable, 'bg-red-100', 'text-red-700'); if (!sugg.best?.length && !sugg.consider?.length && !sugg.lessSuitable?.length) cont.innerHTML = '<p class="text-gray-600">No specific suggestions for this location.</p>'; lucide.createIcons(); }
 
         // --- REAL DATA FETCHING ---
-        // API base URL - set to localhost:3000 for local development
-        let API_BASE_URL = 'http://127.0.0.1:3000';
+        // API base URL - automatically detects environment
+        let API_BASE_URL = window.location.origin;
+        
+        // For local development, override if needed
+        if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
+            API_BASE_URL = 'http://127.0.0.1:3000';
+        }
+        
         async function loadConfig() {
             try {
-                const r = await fetch('http://127.0.0.1:3000/api/config');
+                const r = await fetch(`${API_BASE_URL}/api/config`);
                 if (r.ok) {
                     const cfg = await r.json();
                     if (cfg.apiBaseUrl) API_BASE_URL = String(cfg.apiBaseUrl).replace(/\/$/, '');
                 }
-            } catch (e) { console.warn('Config load failed; using default localhost:3000'); }
+            } catch (e) { console.warn('Config load failed; using default'); }
         }
         async function fetchRealMarketPrices() { try { const r = await fetch(`${API_BASE_URL}/api/marketprices`); if (!r.ok) throw Error('Failed to fetch market prices'); const d = await r.json(); marketData = d; renderMarketPrices(marketData); } catch (e) { console.error('Fetch market error:', e); console.log('Using default market data'); renderMarketPrices(marketData); } }
         function getWeatherIcon(code) { const map = { '01d': 'sun', '01n': 'moon', '02d': 'cloud-sun', '02n': 'cloud-moon', '03d': 'cloud', '03n': 'cloud', '04d': 'cloudy', '04n': 'cloudy', '09d': 'cloud-drizzle', '09n': 'cloud-drizzle', '10d': 'cloud-rain', '10n': 'cloud-rain', '11d': 'cloud-lightning', '11n': 'cloud-lightning', '13d': 'cloud-snow', '13n': 'cloud-snow', '50d': 'cloud-fog', '50n': 'cloud-fog' }; return map[code] || 'cloud-sun'; }
