--- a/public/index.html
+++ b/public/index.html
@@ -835,13 +835,8 @@
         function renderCropSuggestions() { const cont = document.getElementById('cropSuggestionsList'); const locEl = document.getElementById('suggestionLocation'); if (!cont || !appState.userProfile) { cont.innerHTML = '<p class="text-red-600">Profile error.</p>'; return; } const userLoc = appState.userProfile.location.toLowerCase(); locEl.textContent = appState.userProfile.location; let sugg = appState.cropSuggestionData['default']; for (const s in appState.cropSuggestionData) if (userLoc.includes(s)) { sugg = appState.cropSuggestionData[s]; break; } cont.innerHTML = ''; const renderL = (t, cs, bg, txt) => { if (!cs || cs.length === 0) return ''; let h = `<h3 class="text-xl font-bold ${txt} mb-3">${t}</h3><div class="space-y-4">`; cs.forEach(c => { h += ` <div class="${bg} p-4 rounded-lg shadow-sm border-l-4 border-current"> <div class="flex items-center gap-3 mb-1"> <i data-lucide="${c.icon || 'leaf'}" class="w-5 h-5 ${txt}"></i> <h4 class="font-semibold text-lg">${c.name}</h4> </div> <p class="text-sm text-gray-700 ml-8">${c.req}</p> </div> `; }); h += '</div>'; return h; }; cont.innerHTML += renderL('Best Suited', sugg.best, 'bg-green-100', 'text-green-700'); cont.innerHTML += renderL('Consider', sugg.consider, 'bg-yellow-100', 'text-yellow-700'); cont.innerHTML += renderL('Less Suitable', sugg.lessSuitable, 'bg-red-100', 'text-red-700'); if (!sugg.best?.length && !sugg.consider?.length && !sugg.lessSuitable?.length) cont.innerHTML = '<p class="text-gray-600">No specific suggestions for this location.</p>'; lucide.createIcons(); }
 
         // --- REAL DATA FETCHING ---
-        // API base URL - automatically detects environment
+        // API base URL - automatically uses same origin (works on Vercel and local)
         let API_BASE_URL = window.location.origin;
-        
-        // For local development, override if needed
-        if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
-            API_BASE_URL = 'http://127.0.0.1:3000';
-        }
         
         async function loadConfig() {
             try {
