Add 15-20 crops with prices for each region including vegetables and pulses

--- a/public/index.html
+++ b/public/index.html
@@ -800,8 +800,19 @@
                 { name: 'Cotton', price: 6500, trend: 'up', trendPercent: 0.8 },
                 { name: 'Sugarcane', price: 380, trend: 'stable', trendPercent: 0.0 },
                 { name: 'Maize', price: 1850, trend: 'up', trendPercent: 1.8 },
-                { name: 'Bajra', price: 2100, trend: 'stable', trendPercent: 0.5 },
-                { name: 'Gram', price: 5200, trend: 'up', trendPercent: 2.2 }
+                { name: 'Bajra (Pearl Millet)', price: 2100, trend: 'stable', trendPercent: 0.5 },
+                { name: 'Gram (Chickpea)', price: 5200, trend: 'up', trendPercent: 2.2 },
+                { name: 'Potato', price: 1150, trend: 'down', trendPercent: 0.9 },
+                { name: 'Onion', price: 2250, trend: 'up', trendPercent: 3.8 },
+                { name: 'Tomato', price: 3200, trend: 'up', trendPercent: 4.5 },
+                { name: 'Barley', price: 1680, trend: 'stable', trendPercent: 0.3 },
+                { name: 'Sunflower', price: 6200, trend: 'up', trendPercent: 1.4 },
+                { name: 'Peas', price: 4800, trend: 'stable', trendPercent: 0.7 },
+                { name: 'Cabbage', price: 1400, trend: 'up', trendPercent: 2.1 },
+                { name: 'Cauliflower', price: 1850, trend: 'stable', trendPercent: 0.6 },
+                { name: 'Carrot', price: 2800, trend: 'up', trendPercent: 3.2 },
+                { name: 'Garlic', price: 8500, trend: 'up', trendPercent: 5.8 },
+                { name: 'Guar', price: 5800, trend: 'up', trendPercent: 2.6 }
             ],
             'punjab': [
                 { name: 'Wheat', price: 2080, trend: 'up', trendPercent: 2.8 },
@@ -811,17 +822,39 @@
                 { name: 'Sugarcane', price: 390, trend: 'stable', trendPercent: 0.0 },
                 { name: 'Potato', price: 1200, trend: 'down', trendPercent: 0.8 },
                 { name: 'Onion', price: 2200, trend: 'up', trendPercent: 3.5 },
-                { name: 'Mustard', price: 5500, trend: 'up', trendPercent: 1.8 }
+                { name: 'Mustard', price: 5500, trend: 'up', trendPercent: 1.8 },
+                { name: 'Bajra', price: 2150, trend: 'stable', trendPercent: 0.4 },
+                { name: 'Gram', price: 5300, trend: 'up', trendPercent: 2.3 },
+                { name: 'Tomato', price: 3400, trend: 'up', trendPercent: 4.8 },
+                { name: 'Peas', price: 5000, trend: 'up', trendPercent: 1.9 },
+                { name: 'Barley', price: 1720, trend: 'stable', trendPercent: 0.5 },
+                { name: 'Sunflower', price: 6400, trend: 'up', trendPercent: 1.6 },
+                { name: 'Carrot', price: 2900, trend: 'up', trendPercent: 3.4 },
+                { name: 'Cabbage', price: 1450, trend: 'stable', trendPercent: 0.8 },
+                { name: 'Cauliflower', price: 1900, trend: 'up', trendPercent: 2.2 },
+                { name: 'Radish', price: 1100, trend: 'stable', trendPercent: 0.3 },
+                { name: 'Garlic', price: 9000, trend: 'up', trendPercent: 6.2 }
             ],
             'maharashtra': [
                 { name: 'Sugarcane', price: 350, trend: 'stable', trendPercent: 0.2 },
                 { name: 'Cotton', price: 6800, trend: 'up', trendPercent: 1.5 },
                 { name: 'Soybean', price: 4200, trend: 'up', trendPercent: 2.5 },
                 { name: 'Onion', price: 2500, trend: 'up', trendPercent: 4.2 },
-                { name: 'Tur Dal', price: 6200, trend: 'stable', trendPercent: 0.8 },
+                { name: 'Tur Dal (Pigeon Pea)', price: 6200, trend: 'stable', trendPercent: 0.8 },
                 { name: 'Gram', price: 5100, trend: 'up', trendPercent: 1.9 },
                 { name: 'Wheat', price: 1950, trend: 'stable', trendPercent: 0.3 },
-                { name: 'Rice', price: 2900, trend: 'down', trendPercent: 1.1 }
+                { name: 'Rice', price: 2900, trend: 'down', trendPercent: 1.1 },
+                { name: 'Jowar (Sorghum)', price: 3100, trend: 'up', trendPercent: 1.7 },
+                { name: 'Bajra', price: 2050, trend: 'stable', trendPercent: 0.6 },
+                { name: 'Tomato', price: 3800, trend: 'up', trendPercent: 5.2 },
+                { name: 'Potato', price: 1050, trend: 'down', trendPercent: 1.8 },
+                { name: 'Groundnut', price: 5600, trend: 'up', trendPercent: 2.1 },
+                { name: 'Sunflower', price: 5900, trend: 'up', trendPercent: 1.3 },
+                { name: 'Chilli', price: 12000, trend: 'up', trendPercent: 7.5 },
+                { name: 'Turmeric', price: 8500, trend: 'stable', trendPercent: 0.9 },
+                { name: 'Grapes', price: 4500, trend: 'up', trendPercent: 3.6 },
+                { name: 'Pomegranate', price: 6800, trend: 'stable', trendPercent: 1.2 },
+                { name: 'Banana', price: 2200, trend: 'up', trendPercent: 2.8 }
             ],
             'uttar pradesh': [
                 { name: 'Wheat', price: 2030, trend: 'up', trendPercent: 2.3 },
@@ -830,7 +863,19 @@
                 { name: 'Potato', price: 1100, trend: 'down', trendPercent: 1.5 },
                 { name: 'Maize', price: 1820, trend: 'up', trendPercent: 1.6 },
                 { name: 'Mustard', price: 5350, trend: 'up', trendPercent: 1.4 },
-                { name: 'Onion', price: 2300, trend: 'up', trendPercent: 3.8 }
+                { name: 'Onion', price: 2300, trend: 'up', trendPercent: 3.8 },
+                { name: 'Gram', price: 5150, trend: 'up', trendPercent: 2.0 },
+                { name: 'Bajra', price: 2080, trend: 'stable', trendPercent: 0.5 },
+                { name: 'Barley', price: 1690, trend: 'stable', trendPercent: 0.4 },
+                { name: 'Peas', price: 4900, trend: 'up', trendPercent: 1.8 },
+                { name: 'Tomato', price: 3300, trend: 'up', trendPercent: 4.6 },
+                { name: 'Cauliflower', price: 1780, trend: 'stable', trendPercent: 0.7 },
+                { name: 'Cabbage', price: 1380, trend: 'up', trendPercent: 2.0 },
+                { name: 'Carrot', price: 2750, trend: 'up', trendPercent: 3.1 },
+                { name: 'Brinjal', price: 2600, trend: 'stable', trendPercent: 0.9 },
+                { name: 'Okra (Bhindi)', price: 3500, trend: 'up', trendPercent: 4.2 },
+                { name: 'Bitter Gourd', price: 4200, trend: 'up', trendPercent: 3.8 },
+                { name: 'Bottle Gourd', price: 2100, trend: 'stable', trendPercent: 1.1 }
             ],
             'delhi': [
                 { name: 'Wheat', price: 2100, trend: 'up', trendPercent: 2.7 },
@@ -838,7 +883,19 @@
                 { name: 'Potato', price: 1250, trend: 'down', trendPercent: 1.2 },
                 { name: 'Onion', price: 2400, trend: 'up', trendPercent: 4.0 },
                 { name: 'Tomato', price: 3500, trend: 'up', trendPercent: 5.5 },
-                { name: 'Cauliflower', price: 1800, trend: 'stable', trendPercent: 0.4 }
+                { name: 'Cauliflower', price: 1800, trend: 'stable', trendPercent: 0.4 },
+                { name: 'Cabbage', price: 1420, trend: 'up', trendPercent: 2.1 },
+                { name: 'Carrot', price: 2850, trend: 'up', trendPercent: 3.3 },
+                { name: 'Peas', price: 5100, trend: 'up', trendPercent: 2.0 },
+                { name: 'Brinjal', price: 2700, trend: 'stable', trendPercent: 1.0 },
+                { name: 'Okra', price: 3600, trend: 'up', trendPercent: 4.4 },
+                { name: 'Cucumber', price: 2200, trend: 'stable', trendPercent: 0.8 },
+                { name: 'Radish', price: 1150, trend: 'up', trendPercent: 1.9 },
+                { name: 'Spinach', price: 1800, trend: 'stable', trendPercent: 0.5 },
+                { name: 'Coriander', price: 4500, trend: 'up', trendPercent: 3.9 },
+                { name: 'Mint', price: 3800, trend: 'stable', trendPercent: 1.2 },
+                { name: 'Green Chilli', price: 8500, trend: 'up', trendPercent: 6.8 },
+                { name: 'Lemon', price: 9500, trend: 'up', trendPercent: 8.2 }
             ],
             'default': [
                 { name: 'Wheat', price: 2050, trend: 'up', trendPercent: 2.5 },
@@ -848,7 +905,14 @@
                 { name: 'Mustard', price: 5400, trend: 'up', trendPercent: 1.5 },
                 { name: 'Maize', price: 1850, trend: 'up', trendPercent: 1.8 },
                 { name: 'Potato', price: 1200, trend: 'down', trendPercent: 1.0 },
-                { name: 'Onion', price: 2200, trend: 'up', trendPercent: 3.5 }
+                { name: 'Onion', price: 2200, trend: 'up', trendPercent: 3.5 },
+                { name: 'Tomato', price: 3300, trend: 'up', trendPercent: 4.5 },
+                { name: 'Gram', price: 5150, trend: 'up', trendPercent: 2.0 },
+                { name: 'Bajra', price: 2100, trend: 'stable', trendPercent: 0.5 },
+                { name: 'Barley', price: 1700, trend: 'stable', trendPercent: 0.4 },
+                { name: 'Peas', price: 4900, trend: 'up', trendPercent: 1.8 },
+                { name: 'Cauliflower', price: 1800, trend: 'stable', trendPercent: 0.6 },
+                { name: 'Cabbage', price: 1400, trend: 'up', trendPercent: 2.0 }
             ]
         };
         
